# fbx2gltf

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  glTF.cpp  gltfPackage.cpp  json.hpp  main.cpp
src/IO-glTF/: CMakeLists.txt  IOglTF.cpp  IOglTF.h  glslShader.cpp  glslShader.h  gltfWriter-Animation.cpp  gltfWriter-Material.cpp  gltfWriter-Mesh.cpp  gltfWriter-Shaders.cpp  gltfWriter-Skin.cpp  gltfWriter-Technique.cpp  gltfWriter-Texture.cpp  gltfWriter.cpp  gltfWriter.h  gltfWriterVBO.cpp  gltfwriterVBO.h
